# Linkedin-Posts-Agent

./: .gitignore  README.md  app.py  pyproject.toml  report.md  requirements.txt
src/linkedin_architect/: crew.py  main.py
src/linkedin_architect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/linkedin_architect/config/: agents.yaml  tasks.yaml
