[project]
name = "linkedin_architect"
version = "0.1.0"
description = "linkedin_architect using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.14.3",
    "crewai[tools]==1.14.3",
    "duckduckgo-search>=8.1.1",
    "langchain-openai>=1.2.1",
    "streamlit>=1.57.0",
]
